@@ -1,4 +1,4 @@
-package uk.gov.hmcts.reform.mi.miextractionservice.component.impl.corecasedata;
+package uk.gov.hmcts.reform.mi.miextractionservice.component.impl;
 
 import com.azure.storage.blob.BlobClient;
 import com.azure.storage.blob.BlobContainerClient;
@@ -15,19 +15,17 @@ import org.mockito.stubbing.Answer;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.util.ReflectionTestUtils;
 
-import uk.gov.hmcts.reform.mi.micore.model.CoreCaseData;
 import uk.gov.hmcts.reform.mi.miextractionservice.component.ArchiveComponent;
 import uk.gov.hmcts.reform.mi.miextractionservice.component.BlobDownloadComponent;
 import uk.gov.hmcts.reform.mi.miextractionservice.component.CheckWhitelistComponent;
-import uk.gov.hmcts.reform.mi.miextractionservice.component.CoreCaseDataFormatterComponent;
-import uk.gov.hmcts.reform.mi.miextractionservice.component.FilterComponent;
-import uk.gov.hmcts.reform.mi.miextractionservice.component.JsonlWriterComponent;
 import uk.gov.hmcts.reform.mi.miextractionservice.component.MetadataFilterComponent;
-import uk.gov.hmcts.reform.mi.miextractionservice.domain.OutputCoreCaseData;
+import uk.gov.hmcts.reform.mi.miextractionservice.component.WriteDataComponent;
+import uk.gov.hmcts.reform.mi.miextractionservice.domain.SourceEnum;
 import uk.gov.hmcts.reform.mi.miextractionservice.exception.ParserException;
+import uk.gov.hmcts.reform.mi.miextractionservice.factory.WriteDataFactory;
 import uk.gov.hmcts.reform.mi.miextractionservice.test.helpers.PagedIterableStub;
 import uk.gov.hmcts.reform.mi.miextractionservice.util.DateTimeUtil;
-import uk.gov.hmcts.reform.mi.miextractionservice.util.ReaderUtil;
+import uk.gov.hmcts.reform.mi.miextractionservice.util.SourceUtil;
 import uk.gov.hmcts.reform.mi.miextractionservice.wrapper.FileWrapper;
 import uk.gov.hmcts.reform.mi.miextractionservice.wrapper.WriterWrapper;
 
@@ -42,9 +40,8 @@ import java.nio.file.Paths;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.util.Collections;
+import java.util.List;
 
-import static org.hamcrest.Matchers.allOf;
-import static org.hamcrest.Matchers.hasItem;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
@@ -60,16 +57,13 @@ import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.mockito.hamcrest.MockitoHamcrest.argThat;
 import static uk.gov.hmcts.reform.mi.miextractionservice.test.helpers.TestConstants.TEST_CCD_JSONL;
-import static uk.gov.hmcts.reform.mi.miextractionservice.test.helpers.TestConstants.TEST_CCD_JSONL_AS_CORE_CASE_DATA;
-import static uk.gov.hmcts.reform.mi.miextractionservice.test.helpers.TestConstants.TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA;
 import static uk.gov.hmcts.reform.mi.miextractionservice.test.helpers.TestConstants.TEST_CCD_JSONL_OUTDATED_FUTURE;
 import static uk.gov.hmcts.reform.mi.miextractionservice.test.helpers.TestConstants.TEST_CCD_JSONL_OUTDATED_PAST;
 
 @SuppressWarnings({"PMD.UnusedPrivateField","PMD.ExcessiveImports","PMD.TooManyMethods"})
 @ExtendWith(SpringExtension.class)
-public class CoreCaseDataExportBlobDataComponentImplTest {
+class ExportBlobDataComponentImplTest {
 
     private static final String OUTPUT_ASSERTION_MATCHING_ERROR = "Returned blob name does not match the expected.";
 
@@ -109,33 +103,28 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
     private BlobDownloadComponent blobDownloadComponent;
 
     @Mock
-    private FilterComponent<CoreCaseData> filterComponent;
-
-    @Mock
-    private CoreCaseDataFormatterComponent<OutputCoreCaseData> coreCaseDataFormatterComponent;
-
-    @Mock
-    private JsonlWriterComponent<OutputCoreCaseData> jsonlWriterComponent;
+    private WriteDataFactory writeDataFactory;
 
     @Mock
     private ArchiveComponent archiveComponent;
 
     @Spy
-    private ReaderUtil readerUtil;
-
-    @Spy
     private DateTimeUtil dateTimeUtil;
 
+    @Spy
+    private SourceUtil sourceUtil;
+
     @InjectMocks
-    private CoreCaseDataExportBlobDataComponentImpl underTest;
+    private ExportBlobDataComponentImpl underTest;
 
     private BlobServiceClient sourceBlobServiceClient;
     private BlobServiceClient targetBlobServiceClient;
 
     private BufferedWriter bufferedWriter;
+    private WriteDataComponent writeDataComponent;
 
     @BeforeEach
-    public void setUp() throws IOException {
+    void setUp() throws IOException {
         sourceBlobServiceClient = mock(BlobServiceClient.class);
         targetBlobServiceClient = mock(BlobServiceClient.class);
 
@@ -146,10 +135,13 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
         when(writerWrapper.getBufferedWriter(any(Path.class))).thenReturn(bufferedWriter);
         when(checkWhitelistComponent.isContainerWhitelisted(anyString())).thenReturn(true);
         when(metadataFilterComponent.filterByMetadata(anyMap())).thenReturn(true);
+
+        writeDataComponent = mock(WriteDataComponent.class);
+        when(writeDataFactory.getWriteComponent(SourceEnum.CORE_CASE_DATA)).thenReturn(writeDataComponent);
     }
 
     @Test
-    public void givenBlobServiceClientsAndDatesToExtract_whenExportBlobDataAndGetUrl_thenReturnUrlOfUploadedExtractedDataBlob() throws Exception {
+    void givenBlobServiceClientsAndDatesToExtract_whenExportBlobDataAndGetUrl_thenReturnUrlOfUploadedExtractedDataBlob() throws Exception {
         BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
         BlobContainerItem notCcdBlobContainerItem = mock(BlobContainerItem.class);
 
@@ -179,16 +171,6 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
         when(blobDownloadComponent.openBlobInputStream(sourceBlobServiceClient, TEST_CONTAINER_NAME, TEST_BLOB_NAME_TWO))
             .thenReturn(new ByteArrayInputStream(TEST_CCD_JSONL_OUTDATED_PAST.getBytes()));
 
-        when(filterComponent
-            .filterDataInDateRange(argThat(allOf(hasItem(TEST_CCD_JSONL), hasItem(TEST_CCD_JSONL_OUTDATED_FUTURE))),
-                eq(TEST_FROM_DATE_TIME), eq(TEST_TO_DATE_TIME)))
-            .thenReturn(Collections.singletonList(TEST_CCD_JSONL_AS_CORE_CASE_DATA));
-        when(filterComponent
-            .filterDataInDateRange(argThat(allOf(hasItem(TEST_CCD_JSONL_OUTDATED_PAST))), eq(TEST_FROM_DATE_TIME), eq(TEST_TO_DATE_TIME)))
-            .thenReturn(Collections.emptyList());
-
-        when(coreCaseDataFormatterComponent.formatData(TEST_CCD_JSONL_AS_CORE_CASE_DATA)).thenReturn(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA);
-
         BlobContainerClient targetBlobContainerClient = mock(BlobContainerClient.class);
 
         when(targetBlobServiceClient.getBlobContainerClient(TEST_OUTPUT_CONTAINER_NAME)).thenReturn(targetBlobContainerClient);
@@ -199,14 +181,20 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
         when(targetBlobContainerClient.getBlobClient(OUTPUT_NAME)).thenReturn(targetBlobClient);
 
         String result = underTest.exportBlobsAndGetOutputName(
-            sourceBlobServiceClient, targetBlobServiceClient, TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME
+            sourceBlobServiceClient, targetBlobServiceClient,
+            TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME,
+            CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
         );
 
         assertEquals(OUTPUT_NAME, result, OUTPUT_ASSERTION_MATCHING_ERROR);
 
         verify(targetBlobContainerClient, never()).create();
-        verify(jsonlWriterComponent, times(1))
-            .writeLinesAsJsonl(any(BufferedWriter.class), eq(Collections.singletonList(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA)));
+        verify(writeDataComponent, times(1))
+            .writeData(any(BufferedWriter.class), eq(List.of(TEST_CCD_JSONL, TEST_CCD_JSONL_OUTDATED_FUTURE)),
+                eq(TEST_FROM_DATE_TIME), eq(TEST_TO_DATE_TIME));
+        verify(writeDataComponent, times(1))
+            .writeData(any(BufferedWriter.class), eq(List.of(TEST_CCD_JSONL_OUTDATED_PAST)),
+                eq(TEST_FROM_DATE_TIME), eq(TEST_TO_DATE_TIME));
         verify(archiveComponent)
             .createArchive(Collections.singletonList(WORKING_FILE_NAME), OUTPUT_NAME);
         verify(targetBlobClient).uploadFromFile(OUTPUT_NAME, true);
@@ -216,23 +204,18 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
     }
 
     @Test
-    public void givenDataOverMaxLines_whenExportBlobDataAndGetUrl_thenReturnUrlOfUploadedExtractedDataBlob() throws Exception {
+    void givenDataOverMaxLines_whenExportBlobDataAndGetUrl_thenReturnUrlOfUploadedExtractedDataBlob() throws Exception {
         ReflectionTestUtils.setField(underTest, MAX_LINES_FIELD_PROPERTY, "1");
 
         BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
-
         when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>(blobContainerItem));
-
         when(blobContainerItem.getName()).thenReturn(TEST_CONTAINER_NAME);
 
         BlobContainerClient blobContainerClient = mock(BlobContainerClient.class);
-
         when(sourceBlobServiceClient.getBlobContainerClient(TEST_CONTAINER_NAME)).thenReturn(blobContainerClient);
 
         BlobItem blobItemOne = mock(BlobItem.class);
-
         when(blobContainerClient.listBlobs()).thenReturn(new PagedIterableStub<>(blobItemOne));
-
         when(blobItemOne.getName()).thenReturn(TEST_BLOB_NAME_ONE);
 
         String multiLineData = TEST_CCD_JSONL + "\n" + TEST_CCD_JSONL + "\n" + TEST_CCD_JSONL;
@@ -240,12 +223,6 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
         when(blobDownloadComponent.openBlobInputStream(sourceBlobServiceClient, TEST_CONTAINER_NAME, TEST_BLOB_NAME_ONE))
             .thenReturn(new ByteArrayInputStream(multiLineData.getBytes()));
 
-        when(filterComponent
-            .filterDataInDateRange(argThat(allOf(hasItem(TEST_CCD_JSONL))), eq(TEST_FROM_DATE_TIME), eq(TEST_TO_DATE_TIME)))
-            .thenReturn(Collections.singletonList(TEST_CCD_JSONL_AS_CORE_CASE_DATA));
-
-        when(coreCaseDataFormatterComponent.formatData(TEST_CCD_JSONL_AS_CORE_CASE_DATA)).thenReturn(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA);
-
         BlobContainerClient targetBlobContainerClient = mock(BlobContainerClient.class);
 
         when(targetBlobServiceClient.getBlobContainerClient(TEST_OUTPUT_CONTAINER_NAME)).thenReturn(targetBlobContainerClient);
@@ -255,15 +232,24 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
 
         when(targetBlobContainerClient.getBlobClient(OUTPUT_NAME)).thenReturn(targetBlobClient);
 
+        doAnswer((Answer<Void>) invocation -> {
+            // Mockito verifies by reference to list, so this is to ensure the correct args are used at time of invocation.
+            assertEquals(Collections.singletonList(TEST_CCD_JSONL), invocation.getArgument(1),
+                "Expected test data to be written on write data.");
+            return null;
+        }).when(writeDataComponent).writeData(any(BufferedWriter.class), anyList(), any(), any());
+
         String result = underTest.exportBlobsAndGetOutputName(
-            sourceBlobServiceClient, targetBlobServiceClient, TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME
+            sourceBlobServiceClient, targetBlobServiceClient,
+            TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME,
+            CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
         );
 
         assertEquals(OUTPUT_NAME, result, OUTPUT_ASSERTION_MATCHING_ERROR);
 
         verify(targetBlobContainerClient, never()).create();
-        verify(jsonlWriterComponent, times(3))
-            .writeLinesAsJsonl(any(BufferedWriter.class), eq(Collections.singletonList(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA)));
+        verify(writeDataComponent, times(3))
+            .writeData(any(BufferedWriter.class), anyList(), eq(TEST_FROM_DATE_TIME), eq(TEST_TO_DATE_TIME));
         verify(archiveComponent)
             .createArchive(Collections.singletonList(WORKING_FILE_NAME), OUTPUT_NAME);
         verify(targetBlobClient).uploadFromFile(OUTPUT_NAME, true);
@@ -273,20 +259,16 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
     }
 
     @Test
-    public void givenNoDataWithLatestDate_whenExportBlobDataAndGetUrl_thenReturnUrlOfUploadedExtractedDataBlob() throws Exception {
+    void givenNoDataWithLatestDate_whenExportBlobDataAndGetUrl_thenReturnUrlOfUploadedExtractedDataBlob() throws Exception {
         BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
-
         when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>(blobContainerItem));
-
         when(blobContainerItem.getName()).thenReturn(TEST_CONTAINER_NAME);
 
         BlobContainerClient blobContainerClient = mock(BlobContainerClient.class);
-
         when(sourceBlobServiceClient.getBlobContainerClient(TEST_CONTAINER_NAME)).thenReturn(blobContainerClient);
 
         BlobItem blobItemOne = mock(BlobItem.class);
         BlobItem blobItemTwo = mock(BlobItem.class);
-
         when(blobContainerClient.listBlobs()).thenReturn(new PagedIterableStub<>(blobItemOne, blobItemTwo));
 
         when(blobItemOne.getName()).thenReturn(TEST_BLOB_NAME_ONE);
@@ -299,12 +281,8 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
         when(blobDownloadComponent.openBlobInputStream(sourceBlobServiceClient, TEST_CONTAINER_NAME, TEST_BLOB_NAME_TWO))
             .thenReturn(new ByteArrayInputStream("".getBytes()));
 
-        when(filterComponent
-            .filterDataInDateRange(argThat(allOf(hasItem(TEST_CCD_JSONL), hasItem(TEST_CCD_JSONL_OUTDATED_FUTURE))),
-                eq(TEST_FROM_DATE_TIME), eq(TEST_TO_DATE_TIME)))
-            .thenReturn(Collections.singletonList(TEST_CCD_JSONL_AS_CORE_CASE_DATA));
-
-        when(coreCaseDataFormatterComponent.formatData(TEST_CCD_JSONL_AS_CORE_CASE_DATA)).thenReturn(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA);
+        WriteDataComponent writeDataComponent = mock(WriteDataComponent.class);
+        when(writeDataFactory.getWriteComponent(SourceEnum.CORE_CASE_DATA)).thenReturn(writeDataComponent);
 
         BlobContainerClient targetBlobContainerClient = mock(BlobContainerClient.class);
 
@@ -316,14 +294,17 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
         when(targetBlobContainerClient.getBlobClient(OUTPUT_NAME)).thenReturn(targetBlobClient);
 
         String result = underTest.exportBlobsAndGetOutputName(
-            sourceBlobServiceClient, targetBlobServiceClient, TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME
+            sourceBlobServiceClient, targetBlobServiceClient,
+            TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME,
+            CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
         );
 
         assertEquals(OUTPUT_NAME, result, OUTPUT_ASSERTION_MATCHING_ERROR);
 
         verify(targetBlobContainerClient, never()).create();
-        verify(jsonlWriterComponent)
-            .writeLinesAsJsonl(any(BufferedWriter.class), eq(Collections.singletonList(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA)));
+        verify(writeDataComponent, times(1))
+            .writeData(any(BufferedWriter.class), eq(List.of(TEST_CCD_JSONL, TEST_CCD_JSONL_OUTDATED_FUTURE)),
+                eq(TEST_FROM_DATE_TIME), eq(TEST_TO_DATE_TIME));
         verify(archiveComponent)
             .createArchive(Collections.singletonList(WORKING_FILE_NAME), OUTPUT_NAME);
         verify(targetBlobClient).uploadFromFile(OUTPUT_NAME, true);
@@ -333,33 +314,22 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
     }
 
     @Test
-    public void givenDatesToExtractWithNoExistingContainer_whenExportBlobDataAndGetUrl_thenCreateContainerAndReturnUrlOfUploadedExtractedDataBlob()
+    void givenDatesToExtractWithNoExistingContainer_whenExportBlobDataAndGetUrl_thenCreateContainerAndReturnUrlOfUploadedExtractedDataBlob()
         throws Exception {
 
         BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
-
         when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>(blobContainerItem));
-
         when(blobContainerItem.getName()).thenReturn(TEST_CONTAINER_NAME);
 
         BlobContainerClient blobContainerClient = mock(BlobContainerClient.class);
-
         when(sourceBlobServiceClient.getBlobContainerClient(TEST_CONTAINER_NAME)).thenReturn(blobContainerClient);
 
         BlobItem blobItem = mock(BlobItem.class);
-
         when(blobContainerClient.listBlobs()).thenReturn(new PagedIterableStub<>(blobItem));
-
         when(blobItem.getName()).thenReturn(TEST_BLOB_NAME_ONE);
 
         when(blobDownloadComponent.openBlobInputStream(sourceBlobServiceClient, TEST_CONTAINER_NAME, TEST_BLOB_NAME_ONE))
             .thenReturn(new ByteArrayInputStream(TEST_CCD_JSONL.getBytes()));
-
-        when(filterComponent
-            .filterDataInDateRange(argThat(allOf(hasItem(TEST_CCD_JSONL))), eq(TEST_FROM_DATE_TIME), eq(TEST_TO_DATE_TIME)))
-            .thenReturn(Collections.singletonList(TEST_CCD_JSONL_AS_CORE_CASE_DATA));
-
-        when(coreCaseDataFormatterComponent.formatData(TEST_CCD_JSONL_AS_CORE_CASE_DATA)).thenReturn(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA);
 
         BlobContainerClient targetBlobContainerClient = mock(BlobContainerClient.class);
 
@@ -371,14 +341,16 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
         when(targetBlobContainerClient.getBlobClient(OUTPUT_NAME)).thenReturn(targetBlobClient);
 
         String result = underTest.exportBlobsAndGetOutputName(
-            sourceBlobServiceClient, targetBlobServiceClient, TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME
+            sourceBlobServiceClient, targetBlobServiceClient,
+            TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME,
+            CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
         );
 
         assertEquals(OUTPUT_NAME, result, OUTPUT_ASSERTION_MATCHING_ERROR);
 
         verify(targetBlobContainerClient, times(1)).create();
-        verify(jsonlWriterComponent)
-            .writeLinesAsJsonl(any(BufferedWriter.class), eq(Collections.singletonList(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA)));
+        verify(writeDataComponent, times(1))
+            .writeData(any(BufferedWriter.class), eq(Collections.singletonList(TEST_CCD_JSONL)), eq(TEST_FROM_DATE_TIME), eq(TEST_TO_DATE_TIME));
         verify(archiveComponent)
             .createArchive(Collections.singletonList(WORKING_FILE_NAME), OUTPUT_NAME);
         verify(targetBlobClient).uploadFromFile(OUTPUT_NAME, true);
@@ -388,36 +360,25 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
     }
 
     @Test
-    public void givenSameFromDate_whenExportBlobDataAndGetUrl_thenCreateContainerAndReturnUrlOfUploadedExtractedDataBlob() throws Exception {
+    void givenSameFromDate_whenExportBlobDataAndGetUrl_thenCreateContainerAndReturnUrlOfUploadedExtractedDataBlob() throws Exception {
         final OffsetDateTime fromDateSameAsEventDate = OffsetDateTime.of(2000, 01, 29, 0, 0, 0, 0, ZoneOffset.UTC);
         final String datePrefix = "2000-01-29-2001-01-01-";
         final String workingFileName = datePrefix + CCD_WORKING_FILE_NAME;
         final String outputName = datePrefix + CCD_WORKING_ARCHIVE;
 
         BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
-
         when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>(blobContainerItem));
-
         when(blobContainerItem.getName()).thenReturn(TEST_CONTAINER_NAME);
 
         BlobContainerClient blobContainerClient = mock(BlobContainerClient.class);
-
         when(sourceBlobServiceClient.getBlobContainerClient(TEST_CONTAINER_NAME)).thenReturn(blobContainerClient);
 
         BlobItem blobItem = mock(BlobItem.class);
-
         when(blobContainerClient.listBlobs()).thenReturn(new PagedIterableStub<>(blobItem));
-
         when(blobItem.getName()).thenReturn(TEST_BLOB_NAME_ONE);
 
         when(blobDownloadComponent.openBlobInputStream(sourceBlobServiceClient, TEST_CONTAINER_NAME, TEST_BLOB_NAME_ONE))
             .thenReturn(new ByteArrayInputStream(TEST_CCD_JSONL.getBytes()));
-
-        when(filterComponent
-            .filterDataInDateRange(argThat(allOf(hasItem(TEST_CCD_JSONL))), eq(fromDateSameAsEventDate), eq(TEST_TO_DATE_TIME)))
-            .thenReturn(Collections.singletonList(TEST_CCD_JSONL_AS_CORE_CASE_DATA));
-
-        when(coreCaseDataFormatterComponent.formatData(TEST_CCD_JSONL_AS_CORE_CASE_DATA)).thenReturn(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA);
 
         BlobContainerClient targetBlobContainerClient = mock(BlobContainerClient.class);
 
@@ -428,14 +389,18 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
 
         when(targetBlobContainerClient.getBlobClient(outputName)).thenReturn(targetBlobClient);
 
-        String result = underTest
-            .exportBlobsAndGetOutputName(sourceBlobServiceClient, targetBlobServiceClient, fromDateSameAsEventDate, TEST_TO_DATE_TIME);
+        String result = underTest.exportBlobsAndGetOutputName(
+            sourceBlobServiceClient, targetBlobServiceClient,
+            fromDateSameAsEventDate, TEST_TO_DATE_TIME,
+            CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
+        );
 
         assertEquals(outputName, result, OUTPUT_ASSERTION_MATCHING_ERROR);
 
         verify(targetBlobContainerClient, times(1)).create();
-        verify(jsonlWriterComponent)
-            .writeLinesAsJsonl(any(BufferedWriter.class), eq(Collections.singletonList(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA)));
+        verify(writeDataComponent, times(1))
+            .writeData(any(BufferedWriter.class), eq(Collections.singletonList(TEST_CCD_JSONL)),
+                eq(fromDateSameAsEventDate), eq(TEST_TO_DATE_TIME));
         verify(archiveComponent)
             .createArchive(Collections.singletonList(workingFileName), outputName);
         verify(targetBlobClient).uploadFromFile(outputName, true);
@@ -445,36 +410,25 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
     }
 
     @Test
-    public void givenSameToDate_whenExportBlobDataAndGetUrl_thenCreateContainerAndReturnUrlOfUploadedExtractedDataBlob() throws Exception {
+    void givenSameToDate_whenExportBlobDataAndGetUrl_thenCreateContainerAndReturnUrlOfUploadedExtractedDataBlob() throws Exception {
         final OffsetDateTime toDateSameAsEventDate = OffsetDateTime.of(2000, 01, 29, 0, 0, 0, 0, ZoneOffset.UTC);
         final String datePrefix = "1999-12-01-2000-01-29-";
         final String workingFileName = datePrefix + CCD_WORKING_FILE_NAME;
         final String outputName = datePrefix + CCD_WORKING_ARCHIVE;
 
         BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
-
         when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>(blobContainerItem));
-
         when(blobContainerItem.getName()).thenReturn(TEST_CONTAINER_NAME);
 
         BlobContainerClient blobContainerClient = mock(BlobContainerClient.class);
-
         when(sourceBlobServiceClient.getBlobContainerClient(TEST_CONTAINER_NAME)).thenReturn(blobContainerClient);
 
         BlobItem blobItem = mock(BlobItem.class);
-
         when(blobContainerClient.listBlobs()).thenReturn(new PagedIterableStub<>(blobItem));
-
         when(blobItem.getName()).thenReturn(TEST_BLOB_NAME_ONE);
 
         when(blobDownloadComponent.openBlobInputStream(sourceBlobServiceClient, TEST_CONTAINER_NAME, TEST_BLOB_NAME_ONE))
             .thenReturn(new ByteArrayInputStream(TEST_CCD_JSONL.getBytes()));
-
-        when(filterComponent
-            .filterDataInDateRange(argThat(allOf(hasItem(TEST_CCD_JSONL))), eq(TEST_FROM_DATE_TIME), eq(toDateSameAsEventDate)))
-            .thenReturn(Collections.singletonList(TEST_CCD_JSONL_AS_CORE_CASE_DATA));
-
-        when(coreCaseDataFormatterComponent.formatData(TEST_CCD_JSONL_AS_CORE_CASE_DATA)).thenReturn(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA);
 
         BlobContainerClient targetBlobContainerClient = mock(BlobContainerClient.class);
 
@@ -485,14 +439,18 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
 
         when(targetBlobContainerClient.getBlobClient(outputName)).thenReturn(targetBlobClient);
 
-        String result = underTest
-            .exportBlobsAndGetOutputName(sourceBlobServiceClient, targetBlobServiceClient, TEST_FROM_DATE_TIME, toDateSameAsEventDate);
+        String result = underTest.exportBlobsAndGetOutputName(
+            sourceBlobServiceClient, targetBlobServiceClient,
+            TEST_FROM_DATE_TIME, toDateSameAsEventDate,
+            CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
+        );
 
         assertEquals(outputName, result, OUTPUT_ASSERTION_MATCHING_ERROR);
 
         verify(targetBlobContainerClient, times(1)).create();
-        verify(jsonlWriterComponent)
-            .writeLinesAsJsonl(any(BufferedWriter.class), eq(Collections.singletonList(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA)));
+        verify(writeDataComponent, times(1))
+            .writeData(any(BufferedWriter.class), eq(Collections.singletonList(TEST_CCD_JSONL)),
+                eq(TEST_FROM_DATE_TIME), eq(toDateSameAsEventDate));
         verify(archiveComponent)
             .createArchive(Collections.singletonList(workingFileName), outputName);
         verify(targetBlobClient).uploadFromFile(outputName, true);
@@ -502,51 +460,51 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
     }
 
     @Test
-    public void givenNoWhitelistedContainers_whenExportData_thenReturnNullForBlobName() {
+    void givenNoWhitelistedContainers_whenExportData_thenReturnNullForBlobName() {
         BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
-
         when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>(blobContainerItem));
-
         when(blobContainerItem.getName()).thenReturn(TEST_CONTAINER_NAME);
 
         BlobContainerClient blobContainerClient = mock(BlobContainerClient.class);
-
         when(sourceBlobServiceClient.getBlobContainerClient(TEST_CONTAINER_NAME)).thenReturn(blobContainerClient);
 
         when(checkWhitelistComponent.isContainerWhitelisted(TEST_CONTAINER_NAME)).thenReturn(false);
 
         assertEquals(
             null,
-            underTest.exportBlobsAndGetOutputName(sourceBlobServiceClient, targetBlobServiceClient, TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME),
+            underTest.exportBlobsAndGetOutputName(
+                sourceBlobServiceClient, targetBlobServiceClient,
+                TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME,
+                CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
+            ),
             "Expected null output when no containers match whitelist.");
     }
 
     @Test
-    public void givenNoDataToOutput_whenExportBlobData_thenReturnNullForBlobName() {
+    void givenNoDataToOutput_whenExportBlobData_thenReturnNullForBlobName() {
         when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>());
 
         assertEquals(
             null,
-            underTest.exportBlobsAndGetOutputName(sourceBlobServiceClient, targetBlobServiceClient, TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME),
+            underTest.exportBlobsAndGetOutputName(
+                sourceBlobServiceClient, targetBlobServiceClient,
+                TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME,
+                CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
+            ),
             "Expected null output when no containers exist.");
     }
 
     @Test
-    public void givenNoDataAtAllInRetrievedBlobs_whenExportBlobDataAndGetUrl_thenReturnNullForBlobName() throws Exception {
+    void givenNoDataAtAllInRetrievedBlobs_whenExportBlobDataAndGetUrl_thenReturnNullForBlobName() throws Exception {
         BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
-
         when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>(blobContainerItem));
-
         when(blobContainerItem.getName()).thenReturn(TEST_CONTAINER_NAME);
 
         BlobContainerClient blobContainerClient = mock(BlobContainerClient.class);
-
         when(sourceBlobServiceClient.getBlobContainerClient(TEST_CONTAINER_NAME)).thenReturn(blobContainerClient);
 
         BlobItem blobItemOne = mock(BlobItem.class);
-
         when(blobContainerClient.listBlobs()).thenReturn(new PagedIterableStub<>(blobItemOne));
-
         when(blobItemOne.getName()).thenReturn(TEST_BLOB_NAME_ONE);
 
         when(blobDownloadComponent.openBlobInputStream(sourceBlobServiceClient, TEST_CONTAINER_NAME, TEST_BLOB_NAME_ONE))
@@ -554,28 +512,27 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
 
         assertEquals(
             null,
-            underTest.exportBlobsAndGetOutputName(sourceBlobServiceClient, targetBlobServiceClient, TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME),
+            underTest.exportBlobsAndGetOutputName(
+                sourceBlobServiceClient, targetBlobServiceClient,
+                TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME,
+                CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
+            ),
             "Expected null output when no query matching data found.");
 
         verify(bufferedWriter, times(1)).close();
     }
 
     @Test
-    public void givenBufferedWriterWithException_whenExportBlobData_thenVerifyWriterIsClosed() throws Exception {
+    void givenBufferedWriterWithException_whenExportBlobData_thenVerifyWriterIsClosed() throws Exception {
         BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
-
         when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>(blobContainerItem));
-
         when(blobContainerItem.getName()).thenReturn(TEST_CONTAINER_NAME);
 
         BlobContainerClient blobContainerClient = mock(BlobContainerClient.class);
-
         when(sourceBlobServiceClient.getBlobContainerClient(TEST_CONTAINER_NAME)).thenReturn(blobContainerClient);
 
         BlobItem blobItemOne = mock(BlobItem.class);
-
         when(blobContainerClient.listBlobs()).thenReturn(new PagedIterableStub<>(blobItemOne));
-
         when(blobItemOne.getName()).thenReturn(TEST_BLOB_NAME_ONE);
 
         when(blobDownloadComponent.openBlobInputStream(sourceBlobServiceClient, TEST_CONTAINER_NAME, TEST_BLOB_NAME_ONE))
@@ -587,32 +544,31 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
             Writer writer = invocation.getArgument(0);
             writer.write("Should throw IOException");
             return null;
-        }).when(jsonlWriterComponent).writeLinesAsJsonl(any(), any());
+        }).when(writeDataComponent).writeData(any(), any(), any(), any());
 
         assertThrows(ParserException.class, () ->
-            underTest.exportBlobsAndGetOutputName(sourceBlobServiceClient, targetBlobServiceClient, TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME));
+            underTest.exportBlobsAndGetOutputName(
+                sourceBlobServiceClient, targetBlobServiceClient,
+                TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME,
+                CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
+            ));
 
         verify(bufferedWriter, times(1)).close();
     }
 
     @Test
-    public void givenExceptionWhenReadingInputStream_whenExportBlobDataAndGetUrl_throwParserException()
+    void givenExceptionWhenReadingInputStream_whenExportBlobDataAndGetUrl_throwParserException()
         throws Exception {
 
         BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
-
         when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>(blobContainerItem));
-
         when(blobContainerItem.getName()).thenReturn(TEST_CONTAINER_NAME);
 
         BlobContainerClient blobContainerClient = mock(BlobContainerClient.class);
-
         when(sourceBlobServiceClient.getBlobContainerClient(TEST_CONTAINER_NAME)).thenReturn(blobContainerClient);
 
         BlobItem blobItem = mock(BlobItem.class);
-
         when(blobContainerClient.listBlobs()).thenReturn(new PagedIterableStub<>(blobItem));
-
         when(blobItem.getName()).thenReturn(TEST_BLOB_NAME_ONE);
 
         try (InputStream inputStream = mock(InputStream.class)) {
@@ -622,7 +578,11 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
                 .thenReturn(inputStream);
 
             assertThrows(ParserException.class, () ->
-                underTest.exportBlobsAndGetOutputName(sourceBlobServiceClient, targetBlobServiceClient, TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME));
+                underTest.exportBlobsAndGetOutputName(
+                    sourceBlobServiceClient, targetBlobServiceClient,
+                    TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME,
+                    CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
+                ));
 
             // One close each for Buffered Reader and InputStreamReader in try-with-resource
             verify(inputStream, times(2)).close();
@@ -631,21 +591,16 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
     }
 
     @Test
-    public void givenBlobMetadataDoesNotPassFilter_whenExportBlobData_thenReturnNull() {
+    void givenBlobMetadataDoesNotPassFilter_whenExportBlobData_thenReturnNull() {
         BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
-
         when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>(blobContainerItem));
-
         when(blobContainerItem.getName()).thenReturn(TEST_CONTAINER_NAME);
 
         BlobContainerClient blobContainerClient = mock(BlobContainerClient.class);
-
         when(sourceBlobServiceClient.getBlobContainerClient(TEST_CONTAINER_NAME)).thenReturn(blobContainerClient);
 
         BlobItem blobItemOne = mock(BlobItem.class);
-
         when(blobContainerClient.listBlobs()).thenReturn(new PagedIterableStub<>(blobItemOne));
-
         when(blobItemOne.getName()).thenReturn(TEST_BLOB_NAME_ONE);
         when(blobItemOne.getMetadata()).thenReturn(Collections.emptyMap());
 
@@ -653,38 +608,31 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
 
         assertEquals(
             null,
-            underTest.exportBlobsAndGetOutputName(sourceBlobServiceClient, targetBlobServiceClient, TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME),
+            underTest.exportBlobsAndGetOutputName(
+                sourceBlobServiceClient, targetBlobServiceClient,
+                TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME,
+                CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
+            ),
             "Expected null output when no query matching data found.");
     }
 
     @Test
-    public void givenExtractionWithArchiveDisabled_whenExportBlobDataAndGetUrl_thenReturnUrlOfUploadedExtractedDataBlob() throws Exception {
+    void givenExtractionWithArchiveDisabled_whenExportBlobDataAndGetUrl_thenReturnUrlOfUploadedExtractedDataBlob() throws Exception {
         ReflectionTestUtils.setField(underTest, ARCHIVE_FLAG_PROPERTY, "false");
 
         BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
-
         when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>(blobContainerItem));
-
         when(blobContainerItem.getName()).thenReturn(TEST_CONTAINER_NAME);
 
         BlobContainerClient blobContainerClient = mock(BlobContainerClient.class);
-
         when(sourceBlobServiceClient.getBlobContainerClient(TEST_CONTAINER_NAME)).thenReturn(blobContainerClient);
 
         BlobItem blobItem = mock(BlobItem.class);
-
         when(blobContainerClient.listBlobs()).thenReturn(new PagedIterableStub<>(blobItem));
-
         when(blobItem.getName()).thenReturn(TEST_BLOB_NAME_ONE);
 
         when(blobDownloadComponent.openBlobInputStream(sourceBlobServiceClient, TEST_CONTAINER_NAME, TEST_BLOB_NAME_ONE))
             .thenReturn(new ByteArrayInputStream(TEST_CCD_JSONL.getBytes()));
-
-        when(filterComponent
-            .filterDataInDateRange(argThat(allOf(hasItem(TEST_CCD_JSONL))), eq(TEST_FROM_DATE_TIME), eq(TEST_TO_DATE_TIME)))
-            .thenReturn(Collections.singletonList(TEST_CCD_JSONL_AS_CORE_CASE_DATA));
-
-        when(coreCaseDataFormatterComponent.formatData(TEST_CCD_JSONL_AS_CORE_CASE_DATA)).thenReturn(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA);
 
         BlobContainerClient targetBlobContainerClient = mock(BlobContainerClient.class);
 
@@ -696,17 +644,41 @@ public class CoreCaseDataExportBlobDataComponentImplTest {
         when(targetBlobContainerClient.getBlobClient(WORKING_FILE_NAME)).thenReturn(targetBlobClient);
 
         String result = underTest.exportBlobsAndGetOutputName(
-            sourceBlobServiceClient, targetBlobServiceClient, TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME
+            sourceBlobServiceClient, targetBlobServiceClient,
+            TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME,
+            CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
         );
 
         assertEquals(WORKING_FILE_NAME, result, OUTPUT_ASSERTION_MATCHING_ERROR);
 
         verify(targetBlobContainerClient, never()).create();
-        verify(jsonlWriterComponent, times(1))
-            .writeLinesAsJsonl(any(BufferedWriter.class), eq(Collections.singletonList(TEST_CCD_JSONL_AS_OUTPUT_CORE_CASE_DATA)));
+        verify(writeDataComponent, times(1))
+            .writeData(any(BufferedWriter.class), eq(Collections.singletonList(TEST_CCD_JSONL)), eq(TEST_FROM_DATE_TIME), eq(TEST_TO_DATE_TIME));
         verify(archiveComponent, never()).createArchive(anyList(), anyString());
         verify(targetBlobClient).uploadFromFile(WORKING_FILE_NAME, true);
-        verify(fileWrapper, times(2)).deleteFileOnExit(WORKING_FILE_NAME);
+        verify(fileWrapper, times(1)).deleteFileOnExit(WORKING_FILE_NAME);
         verify(bufferedWriter, times(1)).close();
+    }
+
+    @Test
+    void givenBufferedWriterBreaksOnClose_whenExportBlobs_thenThrowParserException() throws IOException {
+        doThrow(IOException.class).when(bufferedWriter).close();
+
+        BlobContainerItem blobContainerItem = mock(BlobContainerItem.class);
+        when(sourceBlobServiceClient.listBlobContainers()).thenReturn(new PagedIterableStub<>(blobContainerItem));
+        when(blobContainerItem.getName()).thenReturn(TEST_CONTAINER_NAME);
+
+        BlobContainerClient blobContainerClient = mock(BlobContainerClient.class);
+        when(sourceBlobServiceClient.getBlobContainerClient(TEST_CONTAINER_NAME)).thenReturn(blobContainerClient);
+
+        when(blobContainerClient.listBlobs()).thenReturn(new PagedIterableStub<>());
+
+        assertThrows(ParserException.class, () -> {
+            underTest.exportBlobsAndGetOutputName(
+                sourceBlobServiceClient, targetBlobServiceClient,
+                TEST_FROM_DATE_TIME, TEST_TO_DATE_TIME,
+                CCD_WORKING_FILE_NAME, SourceEnum.CORE_CASE_DATA
+            );
+        });
     }
 }
